--- a/Backend/.env
+++ b/Backend/.env
@@ -2,7 +2,7 @@ PORT=5000
 
 DB_NAME=railway
 DB_USER=postgres
-DB_PASSWORD=flokSefo5mvgxjlBwtbJFS0FnNotmKpp
+DB_PASSWORD=ekIWvMWvkeRmHjrJcBvhEttlFueCVcRl  # ← правильный пароль из Railway
 DB_HOST=postgres.railway.internal
 DB_PORT=5432
 
@@ -10,3 +10,4 @@ CLIENT_URL=https://front-g41u.vercel.app/
 
 ACCESS_SECRET_KEY=UralskiyACCESSRevdaRandomSecretKey1234
 REFRESH_SECRET_KEY=UralskiyNOT_ACCESSRevdaRandomSecretKey1234refresh
+
