--- a/Backend/.env
+++ b/Backend/.env
@@ -2,7 +2,7 @@ PORT=5000
 
 DB_NAME=railway
 DB_USER=postgres
-DB_PASSWORD=ekIWvMWvkeRmHjrJcBvhEttlFueCVcRl  # ← правильный пароль из Railway
+DB_PASSWORD=ekIWYWWVkeRmHjrJcBvhEttlFueCVcRl
 DB_HOST=postgres.railway.internal
 DB_PORT=5432
 
